# SFND_3D_Object_Tracking

./: .gitignore  CMakeLists.txt  README.md  TTC_Performance_Eval2.csv  cleanup.sh  create_dummy_data.py  create_dummy_data.sh  download_kitti.py  run_project.sh  ttc_spreadsheet.html  visualize_ttc.html
dat/yolo/: README_WEIGHTS.md
images/: FP6_comparison_table.csv
images/fp6_visualizations/: all_combinations.html  top_combinations.html  worst_combinations.html
scripts/: plot_ttc.py  update_readme.py
src/: FinalProject_Camera.cpp  FinalProject_Camera_lidar.cpp  FinalProject_Camera_simple.cpp  camFusion_Student.cpp  camera_sweep.cpp  lidarData.cpp  lidar_topview.cpp  matching2D.hpp  matching2D_Student.cpp  matching2D_util.h
